fix bugs white space and toggle sidebar

--- a/src/Components/projectInfoSection/projectCard.css
+++ b/src/Components/projectInfoSection/projectCard.css
@@ -40,7 +40,7 @@ h1 {
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     border-radius: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
     text-decoration: none;
 }
 
@@ -48,7 +48,7 @@ h1 {
     position: relative;
     width: 100%;
     padding-top: 67%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .fade-img {
